--- a/SuDungHamCuaMang_2.html
+++ b/SuDungHamCuaMang_2.html
@@ -9,14 +9,13 @@
 
 
     let num = prompt('nhập một dãy kí tự gồm cả số :'),
-        str = num.toString(),
-        result = [str[0]];
+        result = [num[0]];
 
-    for (let x = 1; x < str.length; x++) {
-        if ((str[x - 1] % 2 === 0) && (str[x] % 2 === 0)) {
-            result.push('-', str[x]);
+    for (let x = 1; x < num.length; x++) {
+        if ((num[x - 1] % 2 === 0) && (num[x] % 2 === 0)) {
+            result.push('-', num[x]);
         } else {
-            result.push(str[x]);
+            result.push(num[x]);
         }
     }
     document.write(result.join(''));
